fix wrong colored buttons, and fixed add to cart button not displaying in accessory items

--- a/src/components/css/ItemsPage.css
+++ b/src/components/css/ItemsPage.css
@@ -113,6 +113,7 @@
     padding: var(--productListBtn-padding);
     border: var(--productListBtn-border-radius);
     border-radius: 5px;
+    color: var(--text-color);
 }
 
 .activeListBtn {
